--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -149,9 +149,8 @@ table tr:hover {
 
 .card img {
     width: 100%;
-    height: 0;
-    padding-bottom: 100%;
-    object-fit: cover;
+    height: 224px;
+    object-fit: scale-down;
 }
 
 .card h3 {
