--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
     </main>
     <footer>
         <div class="container">
-            <p>© 2025 Контактный зоопарк. Все права защищены.</p>
+            <p>© 2025 Контактный зоопарк.</p>
         </div>
     </footer>
     <script>
