--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -16,7 +16,7 @@
                 <p>Телефон: {{ contact['phone'] }}</p>
                 <div class="actions">
                     <a href="{{ url_for('edit_contact', id=contact['id']) }}" class="btn">Изменить</a>
-                    <form method="POST" action="{{ url_for('delete_contact', id=contact['id']) }}">
+                    <form class="delete-button" method="POST" action="{{ url_for('delete_contact', id=contact['id']) }}">
                         <button type="submit" class="delete-button">Удалить</button>
                     </form>
                 </div>
