--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -13,7 +13,10 @@
             <div class="card">
                 <img src="{{ url_for('static', filename='uploads/' + contact['photo']) }}" alt="Фото {{ contact['name'] }}">
                 <h3>{{ contact['name'] }} {{ contact['surname'] }}</h3>
-                <p>Телефон: {{ contact['phone'] }}</p>
+                <p>
+                    {{ contact['phone'] }}
+                    <button class="material-symbols-outlined copy-button" data-phone="{{ contact['phone'] }}">content_copy</button>
+                </p>
                 <div class="actions">
                     <a href="{{ url_for('edit_contact', id=contact['id']) }}" class="btn">Изменить</a>
                     <form class="delete-button" method="POST" action="{{ url_for('delete_contact', id=contact['id']) }}">
