--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -150,7 +150,7 @@ table tr:hover {
 .card img {
     width: 100%;
     height: 224px;
-    object-fit: scale-down;
+    object-fit: contain;
 }
 
 .card h3 {
